--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -25,7 +25,7 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 }
 
 interface Props {
-  page: Page<CollectionEntry<'blog'>>
+  page: Page<CollectionEntry<'apps'>>
 }
 
 const { page } = Astro.props
